# live-transcribe-speech-engine

./: CONTRIBUTING.md  LICENSE  README.md  build.gradle  build_all.sh
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ogg_opus_encoder.cc  ogg_opus_encoder.h
app/src/main/cpp/jni/: CMakeLists.txt  ogg_opus_encoder.cc  ogg_opus_encoder.h
app/src/main/java/com/google/audio/: CircularByteBuffer.java  MainActivity.java  NetworkConnectionChecker.java  SampleProcessorInterface.java  SpeakerIDLabeler.java  StreamingAudioEncoder.java
app/src/main/java/com/google/audio/asr/: AlwaysSameSpeakerIDLabeler.java  AlwaysSpeechPolicy.java  RepeatingRecognitionSession.java  RequestForRecognitionThread.java  SafeTranscriptionResultFormatter.java  SpeechDetectionPolicy.java  SpeechSession.java  SpeechSessionFactory.java  SpeechSessionListener.java  TimeUtil.java  TranscriptionErrorPublisher.java  TranscriptionResultFormatter.java  TranscriptionResultReceiver.java  TranscriptionResultUpdatePublisher.java
app/src/main/proto/com/google/audio/: codec_and_bitrate.proto  network_state.proto  speaker_id_info.proto
app/src/main/proto/com/google/audio/asr/: cloud_speech_session_params.proto  cloud_speech_stream_observer_params.proto  speech_recognition_model_options.proto  transcription_result.proto  transcription_result_formatter_options.proto
app/src/main/res/layout/: activity_main.xml  api_key_message.xml
app/src/main/res/values/: array.xml  dimens.xml  languages.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
